# NearestNeighbors

./: .gitignore  README.md  pyproject.toml
chat_app/: RUN_APP.md  start_app.bat  start_app.sh
src/llm/: __init__.py  llm.py
src/nn/: csv-to-dataset.py  tmp.ipynb  xslx-to-csv.py
src/ui/: ui.py
src/utils/: column_names.py  french_mapping.py
